# Blassic

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  blassic.cpp  blassic.h  blassic.spec.in  charset.h  codeline.cpp  codeline.h  configure.ac  cpc.def  cursor.cpp  cursor.h  default.def  dim.cpp  dim.h  directory.cpp  directory.h  dynamic.cpp  dynamic.h  edit.cpp  edit.h  element.cpp  element.h  error.cpp  error.h  file.cpp  file.h  fileconsole.cpp  filepopen.cpp  fileprinter.cpp  filesocket.cpp  filewindow.cpp  function.cpp  function.h  gencharset.cpp  graphics.cpp  (+41 more)
